--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Random Food</title>
 </head>
-<body>
-    <h1>อาหารสุ่ม</h1>
-    <p id="food-display"></p>
-    <button onclick="displayRandomFood()">สุ่มอาหาร</button>
 
-    <script src="main.js"></script>
-</body>
+<body>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="RANDOM FOOD.png" alt="Logo">
+        </div>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="food_list.html">Food List</a></li>
+            <li><a href="https://github.com/Krittichai-k" target="_blank">Contact</a></li>
+        </ul>
+    </nav>
+
+    <div class="container">
+        <div class="random">
+            <img src="RANDOM FOOD.png">
+            <p id="food-display"></p>
+            <button onclick="displayRandomFood()">สุ่มอาหาร</button>
+        </div>
+        <script src="main.js"></script>
+    </div>
+
+    <!-- <footer>
+        <p>&copy; 2024 | Krittichai</p>
+    </footer>
+</body> -->
+
 </html>
